--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "babel-loader": "^8.2.3",
     "eslint": "^8.6.0",
     "eslint-plugin-react": "^7.28.0",
+    "eslint-plugin-react-hooks": "^4.3.0",
     "prettier": "^2.5.1",
     "sass-loader": "^12.4.0",
     "typescript": "^4.5.4",
