--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
-    "react-markdown": "^7.1.2"
+    "react-markdown": "^7.1.2",
+    "react-spinners": "^0.11.0"
   },
   "devDependencies": {
     "@babel/core": "^7.16.7",
