--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-markdown": "^7.1.2",
+    "react-router": "^6.2.1",
+    "react-router-dom": "^6.2.1",
     "react-spinners": "^0.11.0"
   },
   "devDependencies": {
